debug-cors-jwt/gloo/default-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-gloo-demo-dns
      namespace: gloo-system
    sniDomains:
    - ceposta-gloo-demo.solo.io
  virtualHost:
    domains:
    - ceposta-gloo-demo.solo.io
    options:
      cors:
        allowMethods:
        - GET
        - OPTIONS
        - POST
        allowOrigin:
        - https://ceposta-gloo-demo.solo.io
      headerManipulation:
        requestHeadersToRemove:
        - cookie
      jwt:
        providers:
          kube:
            issuer: solo.io
            jwks:
              local:
                key: |
                  -----BEGIN PUBLIC KEY-----
                  MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAx7s5/6vgGPoW1PKkSMka
[...]
                  TQIDAQAB
                  -----END PUBLIC KEY-----
    routes:
    - matchers:
      - prefix: /httpbin
      options:
        prefixRewrite: /headers
      routeAction:
        single:
          upstream:
            name: httpbin-static
            namespace: gloo-system
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-web-api-8080
            namespace: gloo-system
